@@ -148,7 +148,7 @@ ErrorCode RocksDBMetaCollection::lockWrite(double timeout) {
 
 /// @brief write unlocks a collection
 void RocksDBMetaCollection::unlockWrite() noexcept {
-  _exclusiveLock.unlockWrite();
+  _exclusiveLock.unlock();
 }
 
 /// @brief read locks a collection, with a timeout
@@ -157,7 +157,7 @@ ErrorCode RocksDBMetaCollection::lockRead(double timeout) {
 }
 
 /// @brief read unlocks a collection
-void RocksDBMetaCollection::unlockRead() { _exclusiveLock.unlockRead(); }
+void RocksDBMetaCollection::unlockRead() { _exclusiveLock.unlock_shared(); }
 
 // rescans the collection to update document count
 uint64_t RocksDBMetaCollection::recalculateCounts() {
@@ -1669,55 +1669,31 @@ ErrorCode RocksDBMetaCollection::doLock(double timeout, AccessMode::Type mode) {
   // user exclusive operations will acquire the R/W lock in write mode.
   TRI_ASSERT(mode == AccessMode::Type::READ || mode == AccessMode::Type::WRITE);
 
-  while (true) {
-    bool gotLock = false;
-    if (mode == AccessMode::Type::WRITE) {
-      gotLock = _exclusiveLock.tryLockWrite();
-    } else if (mode == AccessMode::Type::READ) {
-      gotLock = _exclusiveLock.tryLockRead();
-    } else {
-      // we should never get here
-      TRI_ASSERT(false);
-      return TRI_ERROR_INTERNAL;
-    }
-
-    if (gotLock) {
-      // keep the lock and exit the loop
-      return TRI_ERROR_NO_ERROR;
-    }
-
-    double now = TRI_microtime();
-    if (waitTime == 0) {  // initialize times
-      // set end time for lock waiting
-      if (timeout <= 0.0) {
-        timeout = defaultLockTimeout;
-      }
-
-      startTime = now;
-      waitTime = 1;
-    } else {
-      TRI_ASSERT(startTime > 0.0);
-
-      if (now > startTime + timeout) {
-        LOG_TOPIC("d1e52", TRACE, arangodb::Logger::ENGINES)
-            << "timed out after " << timeout << " s waiting for "
-            << AccessMode::typeString(mode) << " lock on collection '"
-            << _logicalCollection.name() << "'";
-
-        return TRI_ERROR_LOCK_TIMEOUT;
-      }
-    }
-
-    if (now - startTime < 0.001) {
-      std::this_thread::yield();
-    } else {
-      std::this_thread::sleep_for(std::chrono::milliseconds(waitTime));
-
-      if (waitTime < 32) {
-        waitTime *= 2;
-      }
-    }
+  bool gotLock = false;
+  if (mode == AccessMode::Type::WRITE) {
+    gotLock = _exclusiveLock.try_lock_for(timeout);
+  } else if (mode == AccessMode::Type::READ) {
+    gotLock = _exclusiveLock.try_shared_lock_for(timeout);
+  } else {
+    // we should never get here
+    TRI_ASSERT(false);
+    return TRI_ERROR_INTERNAL;
   }
+
+  if (gotLock) {
+    // keep the lock and exit the loop
+    return TRI_ERROR_NO_ERROR;
+  }
+
+  TRI_ASSERT(startTime > 0.0);
+
+  LOG_TOPIC("d1e52", TRACE, arangodb::Logger::ENGINES)
+    << "timed out after " << timeout << " s waiting for "
+    << AccessMode::typeString(mode) << " lock on collection '"
+    << _logicalCollection.name() << "'";
+
+  return TRI_ERROR_LOCK_TIMEOUT;
+
 }
 
 bool RocksDBMetaCollection::haveBufferedOperations(
