@@ -1,7 +1,9 @@
 devel
 -----
 
-* Attempt to avoid busy looping when locking collections with a timeout
+* Optimise runtime performance of exclusive locks.
+
+* Attempt to avoid busy looping when locking collections with a timeout.
 
 * Add a `description` field to OptimizerRule and dump the explanations via the
   `GET /_api/query/rules` endpoint.
